# godaddy-haskell

./: .gitignore  LICENSE  README.md  godaddy.cabal
Network/: GoDaddy.hs
Network/GoDaddy/: AbuseTypes.hs  AftermarketTypes.hs  AgreementTypes.hs  DomainTypes.hs  ErrorTypes.hs
src/: Domain.hs  DomainTypes.hs  ErrorTypes.hs  GoDaddy.hs
test/: DocTest.hs
