name:                godaddy
version:             0.1.0.0
synopsis:            Haskell bindings for the GoDaddy API
description:         Please see README.md
homepage:            https://github.com/kgwinnup/godaddy-hs#readme
license:             MIT
license-file:        LICENSE
author:              Kyle Gwinnup
maintainer:          kpgwinnup@gmail.com
copyright:           2016 Kyle Gwinnup
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag doctest
  description: enable doctest tests
  default: True
  manual: True

library
  exposed-modules:     Network.GoDaddy
                     , Network.GoDaddy.DomainTypes
                     , Network.GoDaddy.ErrorTypes
                     , Network.GoDaddy.AbuseTypes
                     , Network.GoDaddy.AftermarketTypes
                     , Network.GoDaddy.AgreementTypes
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-conduit >= 2.1.11
                     , http-types >= 0.9.1
                     , lens
                     , text
  default-language:    Haskell2010

test-suite doctest 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:     base >= 4.7 && < 5
                     , bytestring
                     , http-client
                     , http-conduit >= 2.1.11
                     , http-types >= 0.9.1
                     , text
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kgwinnup/godaddy-hs
